ZXZ Utils Library v1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "react-native-react-native-zxz-utils",
+  "name": "react-native-zxz-utils",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
